[REFACTOR] Refactor RoomChatService to improve test method naming and structure