@@ -5,72 +5,53 @@ import id.ac.ui.cs.advprog.papikosbe.repository.chat.RoomChatRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.util.*;
+import java.util.List;
+import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
 public class RoomChatServiceImplTest {
 
-    RoomChatRepository roomChatRepository;
-    RoomChatServiceImpl roomChatService;
+    private RoomChatRepository roomChatRepository;
+    private RoomChatService roomChatService;
+
+    private UUID penyewaId;
+    private UUID pemilikKosId;
 
     @BeforeEach
     void setUp() {
         roomChatRepository = mock(RoomChatRepository.class);
         roomChatService = new RoomChatServiceImpl(roomChatRepository);
+
+        penyewaId = UUID.randomUUID();
+        pemilikKosId = UUID.randomUUID();
     }
 
     @Test
-    void testCreateRoomChatIfNotExistsShouldReturnTrue() {
-        RoomChat chat = new RoomChat(UUID.randomUUID(), UUID.randomUUID());
+    void testCreateRoomChatIfNotExists_ShouldCreateIfNotExist() {
+        RoomChat room = new RoomChat(penyewaId, pemilikKosId);
 
-        when(roomChatRepository.getRoomChatsByUser(any())).thenReturn(Collections.emptyList());
+        when(roomChatRepository.findAllByPenyewaId(penyewaId))
+                .thenReturn(List.of()); // belum ada room
 
-        boolean result = roomChatService.createRoomChatIfNotExists(chat);
+        boolean result = roomChatService.createRoomChatIfNotExists(room);
 
         assertTrue(result);
-        verify(roomChatRepository, times(1)).createRoomChat(chat);
+        verify(roomChatRepository, times(1)).save(room);
     }
 
     @Test
-    void testCreateRoomChatIfAlreadyExistsShouldReturnFalse() {
-        UUID penyewaId = UUID.randomUUID();
-        UUID pemilikKosId = UUID.randomUUID();
-
+    void testCreateRoomChatIfNotExists_ShouldNotCreateIfAlreadyExists() {
         RoomChat existing = new RoomChat(penyewaId, pemilikKosId);
-        List<RoomChat> mockChats = List.of(existing);
+        RoomChat newRequest = new RoomChat(penyewaId, pemilikKosId);
 
-        when(roomChatRepository.getRoomChatsByUser(penyewaId)).thenReturn(mockChats);
+        when(roomChatRepository.findAllByPenyewaId(penyewaId))
+                .thenReturn(List.of(existing));
 
-        RoomChat newAttempt = new RoomChat(penyewaId, pemilikKosId);
-        boolean result = roomChatService.createRoomChatIfNotExists(newAttempt);
+        boolean result = roomChatService.createRoomChatIfNotExists(newRequest);
 
         assertFalse(result);
-        verify(roomChatRepository, never()).createRoomChat(any());
-    }
-    @Test
-    void testGetRoomChatById() {
-        UUID id = UUID.randomUUID();
-        RoomChat chat = new RoomChat(UUID.randomUUID(), UUID.randomUUID());
-        chat.setId(id);
-
-        when(roomChatRepository.getRoomChatById(id)).thenReturn(chat);
-
-        RoomChat result = roomChatService.getRoomChatById(id);
-
-        assertEquals(chat, result);
-    }
-
-    @Test
-    void testGetRoomChatsByUser() {
-        UUID userId = UUID.randomUUID();
-        List<RoomChat> chats = List.of(new RoomChat(UUID.randomUUID(), UUID.randomUUID()));
-
-        when(roomChatRepository.getRoomChatsByUser(userId)).thenReturn(chats);
-
-        List<RoomChat> result = roomChatService.getRoomChatsByUser(userId);
-
-        assertEquals(chats, result);
+        verify(roomChatRepository, never()).save(any());
     }
 }
